<resources>
    <string name="app_name">Jaiz</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_from_the_continuation">Start from the continuation</string>
    <string name="choose_a_course">Choose a course</string>
    <string name="study">Study</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_good_at">Not good</string>
    <string name="full_review">Full review</string>
    <string name="words_studied">Words studied</string>
    <string name="words">words</string>
    <string name="result_details">Result Details</string>
    <string name="good">Good</string>
    <string name="home">Home</string>
</resources>