<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragments.home.HomeFragment">

    <TextView
        android:id="@+id/home_title_one"
        android:text="@string/start_from_the_continuation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Start from the continuation -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/home_title_one"
        tools:layout_editor_absoluteX="0dp">
        <!-- A CardView that contains a TextView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="40dp"
            android:background="@android:drawable/dialog_holo_dark_frame"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:background="@color/light_pink"
                android:layout_width="match_parent"
                android:layout_height="200dp" >
                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/home_pie_chart"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_height="180dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="200dp" >

                <TextView
                    android:id="@+id/home_lesson_title"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="Lesson1 Noun1"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/home_japanese_lesson_title"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="10dp"
                    android:gravity="center"
                    android:text="第一章 名詞１"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/home_study_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/background_orange_button"
                    android:paddingLeft="12dp"
                    android:paddingTop="7dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="7dp"
                    android:text="@string/study"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.533" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!--  Choose a course  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/choose_a_course"
            android:textSize="20dp"
            android:textColor="@color/black" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <LinearLayout
                android:id="@+id/home_cards_container"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="250dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:background="@color/black" />

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>